Syntax error fix

--- a/styles/style.css
+++ b/styles/style.css
@@ -9,7 +9,7 @@ body{
 	padding: 0;
 	height: 100%;
 	width: 100%;
-	background-image: url(../sourses/background.jpg);
+	background-image: url(../sourse/background.jpg);
 	background-repeat: no-repeat;
 	background-size: cover;
 }
